--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,8 @@ figure {
   position: fixed;
   overflow-y: scroll;
   z-index: 1001;
-  background: #f2f3f7;
+  /*background: #f2f3f7;*/
+  background: rgba(222, 221, 217, 0.7)
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
